build/k8s/00-nakama-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: starhold
