build/k8s/02-nakama-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nakama-prod
  namespace: starhold
  labels:
    app: nakama
    version: prod
spec:
  serviceName: nakama-headless
  replicas: 3
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  selector:
    matchLabels:
      app: nakama
      version: prod
  template:
    metadata:
      labels:
        app: nakama
        version: prod
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: nakama
          image: 746669197317.dkr.ecr.us-east-1.amazonaws.com/starhold-us/nakama-plus:1.11.1
          imagePullPolicy: Always
          command: ["/bin/sh", "-c"]
          args:
            - |
              DB_URL="postgres://${PGUSER}:${PGPASSWORD}@${PGHOST}:${PGPORT}/${PGDATABASE}?sslmode=require"
              export NAKAMA_CLUSTER_GOSSIP_ADVERTISE_ADDR="${MY_POD_NAME}.nakama-headless.starhold.svc.cluster.local:7335"
              exec /nakama/nakama --name "${MY_POD_NAME}" --config /nakama/data/config.yaml --database.address "$DB_URL"
          ports:
            - name: nakama-socket
              containerPort: 7350
              protocol: TCP
            - name: nakama-console
              containerPort: 7351
              protocol: TCP
            - name: nakama-grpc
              containerPort: 7340
              protocol: TCP
            - name: nakama-gossip
              containerPort: 7335
              protocol: TCP
          volumeMounts:
            - name: nakama-config
              mountPath: /nakama/data/config.yaml
              subPath: nakama.yaml
            - name: nakama-data
              mountPath: /var/lib/nakama/data
          readinessProbe:
            tcpSocket:
              port: 7350
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 7350
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "2000m"
              memory: "4Gi"
      volumes:
        - name: nakama-config
          configMap:
            name: nakama-config
            items:
              - key: nakama.yaml
                path: nakama.yaml
  volumeClaimTemplates:
    - metadata:
        name: nakama-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
