build/k8s/00-etcd.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd-headless
  namespace: starhold
  labels:
    app: etcd
spec:
  clusterIP: None
  ports:
    - name: peer
      port: 2380
      targetPort: 2380
    - name: client
      port: 2379
      targetPort: 2379
  selector:
    app: etcd
---
apiVersion: v1
kind: Service
metadata:
  name: etcd-client
  namespace: starhold
  labels:
    app: etcd
spec:
  ports:
    - name: client
      port: 2379
      targetPort: 2379
  selector:
    app: etcd
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: etcd
  namespace: starhold
  labels:
    app: etcd
spec:
  serviceName: etcd-headless
  replicas: 3
  selector:
    matchLabels:
      app: etcd
  template:
    metadata:
      labels:
        app: etcd
    spec:
      containers:
        - name: etcd
          image: quay.io/coreos/etcd:v3.5.9
          imagePullPolicy: IfNotPresent
          ports:
            - name: client
              containerPort: 2379
            - name: peer
              containerPort: 2380
          command:
            - /usr/local/bin/etcd
            - --name
            - $(MY_POD_NAME)
            - --data-dir
            - /var/run/etcd/default.etcd
            - --initial-advertise-peer-urls
            - http://$(MY_POD_NAME).etcd-headless.starhold.svc.cluster.local:2380
            - --listen-peer-urls
            - http://0.0.0.0:2380
            - --listen-client-urls
            - http://0.0.0.0:2379
            - --advertise-client-urls
            - http://$(MY_POD_NAME).etcd-headless.starhold.svc.cluster.local:2379
            - --initial-cluster-token
            - etcd-cluster-1
            - --initial-cluster
            - etcd-0=http://etcd-0.etcd-headless.starhold.svc.cluster.local:2380,etcd-1=http://etcd-1.etcd-headless.starhold.svc.cluster.local:2380,etcd-2=http://etcd-2.etcd-headless.starhold.svc.cluster.local:2380
            - --initial-cluster-state
            - new
          volumeMounts:
            - name: etcd-data
              mountPath: /var/run/etcd
  volumeClaimTemplates:
    - metadata:
        name: etcd-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
