build/k8s/01-nakama-dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nakama-dev
  namespace: starhold
  labels:
    app: nakama
    version: dev
spec:
  selector:
    app: nakama
    version: dev
  ports:
    - name: nakama-socket
      port: 7350
      targetPort: 7350
      protocol: TCP
    - name: nakama-console
      port: 7351
      targetPort: 7351
      protocol: TCP
    - name: nakama-grpc
      port: 7340
      targetPort: 7340
      protocol: TCP
  type: ClusterIP
