build/k8s/03-nakama-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nakama-ingress
  namespace: starhold
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:746669197317:certificate/904b2882-e95e-4d2c-886c-8207fe3c329b"
spec:
  ingressClassName: alb
  rules:
    - host: nakama.starhold.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nakama
                port:
                  number: 7350
